create prototype web-interface

--- a/vue/src/style.css
+++ b/vue/src/style.css
@@ -7,3 +7,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424; */
+
+.container {
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+}
